[package]
name = "funky"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Turn command history into reusable shell functions."
repository = "https://github.com/kylechamberlin/funky"
homepage = "https://ktc.sh/funky"
readme = "README.md"

[[bin]]
name = "funky"
path = "src/main.rs"

[lib]
name = "funky_lib"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4.5.3", features = ["derive", "env", "unicode", "cargo"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
tera = "1.19.1"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
shellexpand = { version = "3.1.0", features = ["path", "full"] }
color-eyre = "0.6.3"
inquire = { version = "0.7.1", features = ["editor"] }
