[package]
name = "funky"
version = "0.0.0-dev"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Turn command history into reusable shell functions."
repository = "https://github.com/kylechamberlin/funky"
homepage = "https://ktc.sh/funky"
readme = "README.md"

[[bin]]
name = "funky"
path = "src/main.rs"

[lib]
name = "funky_lib"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env", "unicode", "cargo"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
tera = "1.19.1"
serde = { version = "1.0.200", features = ["derive"] }
shellexpand = { version = "3.1.0", features = ["path", "full"] }
color-eyre = "0.6.5"
inquire = { version = "0.9.0", features = ["editor"] }
slug = "0.1.6"
tempfile = "3.21.0"
arboard = "3"

[dev-dependencies]

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "powershell", "homebrew"]
targets = [
  "aarch64-apple-darwin",
  "aarch64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "i686-unknown-linux-gnu",
  "i686-pc-windows-gnu",
]
tap = "kylechamberlin/homebrew-tap"
publish-jobs = ["homebrew"]
github-attestations = true

[profile.dist]
inherits = "release"
